<resources>
    <string name="app_name">Calculator_App</string>

    <dimen name="button_height">75dp</dimen>
    <dimen name="textSize">25sp</dimen>
    <dimen name="buttonMargin">0.5dp</dimen>
    <dimen name="ButtonMargin2">1dp</dimen>
    <dimen name="layout_height">70dp</dimen>


    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ZeroZero">00</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiplication">x</string>
    <string name="division">/</string>
    <string name="dot">.</string>
    <string name="modulo">%</string>
    <string name="equal">=</string>
    <string name="delete">DEL</string>
    <string name="clear">C</string>

    <string name="MemoryPlus">M+</string>
    <string name="MemoryMinus">M-</string>
    <string name="MemoryRead">MR</string>
    <string name="MemoryClear">MC</string>
    <string name="plus_or_minus">+/<Big>-</Big></string>


</resources>
